--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     runtime "org.postgresql:postgresql:42.1.1"
 
     testCompile("junit:junit")
+    testCompile "org.mockito:mockito-core:2.+"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
 }
