--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/admin
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/admin
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
