--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,21 @@ version: "2"
 services:
 
    db:
-      image: postgres
+      image: postgres:9.5
       mem_limit: 1500m
       environment:
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: admin
+          POSTGRES_USER: sample
+          POSTGRES_PASSWORD: sample
+          PGDATA: /var/lib/postgresql/data/pgdata
+          POSTGRES_DB: sample
       ports:
         - "5432:5432"
+
+   shopping-cart:
+      build: .
+      ports:
+        -  "8080:8080"
+      environment:
+        DB_HOST: jdbc:postgresql://db:5432/sample
+        DB_USER: sample
+        DB_PASSWORD: sample
